# sdk

./: .gitignore  .goreleaser.yaml  .pkce-fix-report.md  Makefile  README.md
clients/adk-python/: .gitignore  README.md  pyproject.toml
clients/adk-python/examples/: refund_copilot.py
clients/adk-python/libraos_adk/: __init__.py  agent.py  cli.py  client.py  tool.py
clients/adk-python/tests/: test_agent.py
python/: CHANGELOG.md  README.md  openapi-python-client.yaml  pyproject.toml
python/examples/: 00_quickstart.py  01_basic_chat.py  01b_claude_agent_sdk_drop_in.py  02_create_employee_and_agent.py  03_upload_knowledge.py  04_custom_tool_inline.py  05_custom_tool_webhook.py  06_multi_model_fallback.py  07_bundle_export_import.py  08_async_job_long_running.py  09_streaming_messages.py  10_idempotency.py  11_pagination.py  12_documents_upload.py  13_hooks_subscribe.py  14_filesystem_seed.py  15_users_settings_admin.py  16_sessions_explicit.py  17_personas_discovery.py  18_custom_persona_persist_fields.py  README.md
python/libraos/: __init__.py  _retry.py  _sse.py  _sync.py  _version.py  anthropic_compat.py  callbacks.py  client.py  errors.py  streaming.py
python/libraos/_generated/: __init__.py
python/libraos/_generated/models/: __init__.py  action_callback.py  action_callback_auth.py  action_decision_request.py  action_envelope.py  action_list.py  add_attachment_body.py  add_group_member_request.py  add_group_member_response_200.py  agent.py  agent_create.py  agent_filesystem.py  agent_key.py  agent_list.py  agent_type.py  app.py  app_agent.py  app_agent_list.py  app_install_result.py  app_list.py  (+296 more)
python/libraos/integrations/: __init__.py  aws_lambda.py  fastapi.py  flask.py
python/libraos/resources/: __init__.py  _base.py  agents.py  documents.py  employees.py  filesystem.py  hooks.py  jobs.py  knowledge.py  messages.py  personas.py  sessions.py  settings.py  users.py
python/libraos/simulator/: __init__.py  _loop.py  _signals.py  _wiring.py  archetype.py  archetype.schema.json  errors.py  prompt.py  simulate.py
python/nova_os/: __init__.py  client.py  errors.py  streaming.py
python/nova_os/resources/: agents.py  messages.py
python/nova_os/simulator/: __init__.py  _loop.py  _wiring.py  archetype.py  errors.py  prompt.py  simulate.py  types.py
python/tests/: test_agents_resource.py  test_anthropic_compat.py  test_anthropic_sdk_roundtrip.py  test_aws_lambda_integration.py  test_client.py  test_employees_resource.py  test_errors.py  test_fastapi_integration.py  test_flask_integration.py  test_idempotency.py  test_jobs_resource.py  test_messages_resource.py  test_new_resources.py  test_retry.py  test_simulator_archetype.py  test_simulator_examples.py  test_simulator_prompt.py  test_simulator_run_eval.py  test_simulator_simulate.py  test_simulator_stream.py  test_smoke.py  test_sse.py  test_streaming.py  test_sync_proxy.py  test_webhook_router.py
(+315 files in other folders)
