[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-os-sdk"
dynamic = ["version"]
description = "Partner SDK for Nova OS — Anthropic Managed Agents compatible with multi-model + employee enhancements"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nova OS Team", email = "engineering@meganova.ai" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "attrs>=23.1",
    "anyio>=4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "openapi-python-client>=0.21",
    "anthropic>=0.30",
    "fastapi>=0.110",
    "flask>=3.0",
]

[tool.setuptools.dynamic]
version = { attr = "nova_os._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["nova_os*"]

[tool.setuptools.package-data]
"nova_os.simulator" = ["*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
