[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libraos-sdk"
dynamic = ["version"]
description = "Partner SDK for LibraOS — Anthropic Managed Agents compatible with multi-model + employee enhancements"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "LibraOS Team", email = "engineering@meganova.ai" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "attrs>=23.1",
    "anyio>=4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "openapi-python-client==0.28.3",
    "anthropic>=0.30",
    "fastapi>=0.110",
    "flask>=3.0",
]

[tool.setuptools.dynamic]
version = { attr = "libraos._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["libraos*"]

[tool.setuptools.package-data]
"libraos.simulator" = ["*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
